# megara

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.agents/: README.md  megara.toml  oma-config.yaml
.agents/agents/: architect.md  critic.md  executor.md  executor.toml  planner.md
.agents/hooks/: megara-hook.sh
.agents/rules/: planning.md
.agents/skills/: _version.json
.agents/workflows/: architecture.md  brainstorm.md  debug.md  deepsec.md  docs.md  orchestrate.md  pdf.md  plan.md  ralph.md  review.md  scm.md  ultrawork.md  video.md  work.md
.github/workflows/: ci.yml  release.yml
docs/: index.md  log.md
docs/planning/: 2026-06-10-sisyphus-product-plan.md
docs/references/: open-knowledge-format.md  workflow-ux-audit.md
docs/release/: homebrew.md
harness/: .gitignore  README.md  megara.toml
harness/agents/: architect.toml  contrarian.toml  critic.toml  executor.toml  planner.toml  researcher.toml  simplifier.toml
scripts/: generate-homebrew-formula.sh
src/: agents.rs  auth.rs  clarification.rs  cli.rs  codex.rs  config.rs  daemon.rs  docs.rs  doctor.rs  domain.rs  hook.rs  installer.rs  lib.rs  main.rs  paths.rs  pi.rs  providers.rs  register.rs  storage.rs  targets.rs  tasks.rs  team.rs  templates.rs  tui.rs  ui.rs  ultragoal.rs  update.rs  worktree.rs  writer.rs
src/cli/: agents.rs  common.rs  docs.rs  install.rs  pi.rs  resolve.rs  team.rs  templates.rs  ultragoal.rs  update.rs
src/hook/: artifacts.rs  codex_plan.rs  codex_version.rs  conversation.rs  deep_interview_milestone.rs  deep_interview_reassessment.rs  dispatch.rs  fsutil.rs  git_guard.rs  mutation.rs  parser.rs  post_tool.rs  pre_tool.rs  ralplan_approval.rs  ralplan_context.rs  ralplan_input.rs  ralplan_prompt.rs  ralplan_reviews.rs  ralplan_state.rs  runtime_input.rs  session_alias.rs  state.rs  state_fields.rs  stop.rs  (+9 more)
tests/: cli.rs
(+130 files in other folders)
