[package]
name = "megara"
version = "0.1.0"
edition = "2021"
description = "Project and global agent harness installer"
license = "MIT"
repository = "https://github.com/the-agentic-world/megara"

[[bin]]
name = "megara"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
