[package]
name = "megara"
version = "1.0.3"
edition = "2021"
description = "Project and global agent harness installer"
license = "MIT"
repository = "https://github.com/the-agentic-world/megara"
autotests = false

[[bin]]
name = "megara"
path = "src/main.rs"

[[test]]
name = "unit"
path = "test/unit/main.rs"

[[test]]
name = "integration"
path = "test/integration/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
