[package]
name = "megara"
version = "1.3.1"
edition = "2021"
description = "Project and global agent harness installer"
license = "MIT"
repository = "https://github.com/the-agentic-world/megara"
autotests = false

[[bin]]
name = "megara"
path = "src/main.rs"

[[test]]
name = "unit"
path = "test/unit/main.rs"

[[test]]
name = "integration"
path = "test/integration/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
